<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!--
         Used in Action Bar, and in AndroidManifest to tell the device the name of this app.
         It's to keep this short, so your launcher icon isn't displayed with "The greatest Wea"
         or something similar.
    -->
    <string name="app_name">Lilly</string>

    <!--
         By convention, "action" denotes that this String will be used as the label for an Action,
         typically from the action bar.  The ActionBar is limited real estate, so shorter is better.
    -->
    <string name="action_settings">Filters</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info from the server -->
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Filters</string>

    <string name="last_lat_key" translatable="false">last_lat</string>
    <string name="last_lng_key" translatable="false">last_lng</string>


    <string name="leisure_key" translatable="false">leisure</string>
    <string name="food_key" translatable="false">food</string>
    <string name="drink_key" translatable="false">drink</string>
    <string name="cinema_key" translatable="false">cinema</string>
    <string name="shopping_key" translatable="false">shopping</string>
    <string name="atm_key" translatable="false">atm</string>
    <string name="disco_key" translatable="false">disco</string>


    <string name="filter_leisure_label" translatable="true">Leisure</string>
    <string name="filter_food_label" translatable="true">Food</string>
    <string name="filter_drink_label" translatable="true">Drinks</string>
    <string name="filter_cinema_label" translatable="true">Cinema</string>
    <string name="filter_shopping_label" translatable="true">Shopping</string>
    <string name="filter_atm_label" translatable="true">Atm\'s</string>
    <string name="filter_disco_label" translatable="true">Night Club</string>


    <string name="filter_leisure" translatable="false">leisure</string>
    <string name="filter_food" translatable="false">food</string>
    <string name="filter_drink" translatable="false">drink</string>
    <string name="filter_cinema" translatable="false">cinema</string>
    <string name="filter_shopping" translatable="false">shopping</string>
    <string name="filter_atm" translatable="false">atm</string>
    <string name="filter_disco" translatable="false">disco</string>


</resources>